@@ -32,6 +32,7 @@ import org.apache.solr.common.SolrException;
 import org.apache.solr.common.cloud.Replica;
 import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.params.MultiMapSolrParams;
+import org.hamcrest.Matchers;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
@@ -86,7 +87,9 @@ public class BadClusterTest extends SolrCloudTestCase {
 
   private void testAllNodesDown() throws Exception {
     try (CloudSolrStream stream = new CloudSolrStream(buildSearchExpression(), streamFactory)) {
-      cluster.expireZkSession(cluster.getReplicaJetty(getReplicas().get(0)));
+      // Pre-warm the streaming clients, so that the following getTuples can fail quickly
+      assertEquals(0, getTuples(stream).size());
+      cluster.expireZkSession(cluster.getReplicaJetty(getReplicas().getFirst()));
       expectThrows(IOException.class, () -> getTuples(stream));
     }
   }
@@ -94,12 +97,18 @@ public class BadClusterTest extends SolrCloudTestCase {
   private void testClusterShutdown() throws Exception {
     try (CloudSolrStream stream = new CloudSolrStream(buildSearchExpression(), streamFactory)) {
       cluster.shutdown();
-      getTuples(stream);
-      fail("Expected IOException: SolrException: TimeoutException");
-    } catch (IOException ioe) {
+      IOException ioe = expectThrows(IOException.class, () -> getTuples(stream));
+      assertNotNull("IOException must have a SolrException cause", ioe.getCause());
+      assertThat(
+          "Cause of IOException is incorrect",
+          ioe.getCause(),
+          Matchers.instanceOf(SolrException.class));
       SolrException se = (SolrException) ioe.getCause();
-      TimeoutException te = (TimeoutException) se.getCause();
-      assertNotNull(te);
+      assertNotNull("SolrException must have a TimeoutException cause", se.getCause());
+      assertThat(
+          "Cause of SolrException is incorrect",
+          se.getCause(),
+          Matchers.instanceOf(TimeoutException.class));
     }
   }
 
